--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>MY RESUME</title>
     </head>
     <body>
-        <h1>Sanidhya's Resume</h1>
+        <h1 style="align-text:center;">Sanidhya's Resume</h1>
         <h2>Summary</h2>
         <p>
         I am Sanidhya, an enthusiast being who is always ready to learn and evolve. I love to talk to new people having versatile minds and innovative ideas.
